--- a/index.html
+++ b/index.html
@@ -25,7 +25,78 @@
     </nav>
     <div class="showcase-container">
       <h1>Oi, eu sou o Carlos André</h1>
-      <p>Professional Developer</p>
+      <p>A Professional Web Developer</p>
+    </div>
+
+    <div class="section-container">
+      <div class="section-content">
+        <h2 class="section-title">Sobre mim</h2>
+        <div class="about-me-content">
+          <img src="./assets/images/avatar.png" alt="Carlos" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos
+            voluptas voluptate voluptatem omnis dolorem ipsa atque soluta
+            veritatis, ex placeat, architecto repudiandae quis consectetur sit
+            temporibus quisquam harum eligendi doloribus saepe repellat
+            perspiciatis alias dolores eveniet aliquam. Atque soluta corrupti
+            inventore natus eaque enim, velit expedita odio. Dignissimos, quod
+            cum deleniti mollitia ad error alias explicabo sed voluptatem
+            similique accusamus?
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="section-container">
+      <div class="section-content">
+        <h2 class="section-title">habilidades</h2>
+        <div class="skills-content">
+          <div class="skill-item">
+            <img src="./assets/images/html-icon.png" alt="HTML" />
+            <span>HTML</span>
+            <p>
+              Linguagem responsável por definir o esqueleto de sites. Possuo
+              amplo domínio.
+            </p>
+          </div>
+          <div class="skill-item">
+            <img src="./assets/images/css-icon.png" alt="css" />
+            <span>CSS</span>
+            <p>
+              Linguagem responsável por definir o estilo de sites. Possuo amplo
+              domínio.
+            </p>
+          </div>
+          <div class="skill-item">
+            <img src="./assets/images/javascript-icon.png" alt="javascript" />
+            <span>JavaScript</span>
+            <p>
+              Linguagem responsável por adicionar lógica aos sites. Possuo amplo
+              domínio.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section-container">
+      <div class="section-content">
+        <h2 class="section-title">Projetos</h2>
+        <div class="projects-content">
+          <div class="project-item">
+            <img
+              src="./assets/images/project-1.jpg"
+              alt="Landing Page de Startup"
+            />
+            <div class="project-text">
+              <h3>Landing Page de Sturtup</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Consectetur repudiandae voluptatum quo, ea reprehenderit nisi
+                debitis error qui sint a!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
