--- a/index.html
+++ b/index.html
@@ -82,12 +82,42 @@
         <h2 class="section-title">Projetos</h2>
         <div class="projects-content">
           <div class="project-item">
-            <img
-              src="./assets/images/project-1.jpg"
-              alt="Landing Page de Startup"
-            />
+            <div class="project-item-image project-item-1"></div>
             <div class="project-text">
               <h3>Landing Page de Sturtup</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Consectetur repudiandae voluptatum quo, ea reprehenderit nisi
+                debitis error qui sint a!
+              </p>
+            </div>
+          </div>
+          <div class="project-item">
+            <div class="project-item-image project-item-2"></div>
+            <div class="project-text">
+              <h3>Página de Hotel</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Consectetur repudiandae voluptatum quo, ea reprehenderit nisi
+                debitis error qui sint a!
+              </p>
+            </div>
+          </div>
+          <div class="project-item">
+            <div class="project-item-image project-item-3"></div>
+            <div class="project-text">
+              <h3>Portifólio Programador</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Consectetur repudiandae voluptatum quo, ea reprehenderit nisi
+                debitis error qui sint a!
+              </p>
+            </div>
+          </div>
+          <div class="project-item">
+            <div class="project-item-image project-item-4"></div>
+            <div class="project-text">
+              <h3>Previsão do tempo</h3>
               <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 Consectetur repudiandae voluptatum quo, ea reprehenderit nisi
@@ -98,5 +128,38 @@
         </div>
       </div>
     </div>
+    <div class="section-container">
+      <div class="section-content">
+        <h2 class="section-title">Entre em contato</h2>
+        <form class="contact-form">
+          <input
+            type="text"
+            name="fullName"
+            id="fullName"
+            placeholder="Seu nome"
+            class="form-input"
+          />
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Seu e-mail"
+            class="form-input"
+          />
+          <textarea
+            name="messege"
+            id="messege"
+            rows="5"
+            placeholder="Sua mensagem"
+            class="form-input"
+          ></textarea>
+          <input type="submit" value="Enviar" class="form-button" />
+        </form>
+      </div>
+    </div>
+    <footer>
+      <div class="social-items">Redes Sociais</div>
+      <p>Copyright 2024</p>
+    </footer>
   </body>
 </html>
