--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <title>Portifólio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mobile.css" />
@@ -11,7 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <title>Portifólio</title>
+    <script
+      src="https://kit.fontawesome.com/b3f89f3272.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <nav class="navbar-container">
@@ -158,7 +162,18 @@
       </div>
     </div>
     <footer>
-      <div class="social-items">Redes Sociais</div>
+      <div class="social-items">
+        <a href="mailto:contato.carlosdede@gmail.com"
+          ><i class="fa-solid fa-envelope fa-xl"></i
+        ></a>
+        <a href="https://linkedin.com.br" target="_blank">
+          <i class="fa-brands fa-linkedin fa-xl"></i>
+        </a>
+
+        <a href="https://instagram.com" target="_blank">
+          <i class="fa-brands fa-instagram fa-xl"></i>
+        </a>
+      </div>
       <p>Copyright 2024</p>
     </footer>
   </body>
